* Updates to product ingestions:
  - ECMWF GRIB: added support for new masterTablesVersion=30 data
  - S5P PAL L2: added support for AER_OT, CHOCHO, SIF, SO2 COBRA, and TCWV

1.18 2023-06-08
~~~~~~~~~~~~~~~

* Rename all uses of 'water vapour' to 'water vapor'.

* Added =| bitfield operater to allow filtering for the case where only some
  bits within the mask are set.

* The uncertainty propagation of *_uncertainty_random variables for the
  temporal binning operation now always assumes no correlation. For spatial
  binning the random component is removed for the area weighted average
  approach and it is propagated using no correlation for the simple binning
  based on center points.

* Added derivation for 'area {latitude,longitude}' and fixed area calculation
  where South Pole was an edge point.

* Fixed reading of string arrays in HARP Python interface.

* Updates to product ingestions:
  - ECMWF GRIB: added support for new masterTablesVersion=29 data
  - S5P L2 CLOUD: fixed qa_value ingestion for CRB (now use qa_value_crb)
  - S5P L2 SO2: added support for SO2 layer height
  - OMI L3: added support for OMHCHOd, OMNO2d, and OMSO2e

1.17 2022-12-12
~~~~~~~~~~~~~~~

* Added additional conventions for variable names related to areosol/cloud
  properties.

* Fixed issue with geographical area overlap calculation and improvided
  performance of performing operations on geographical polygon data.

* Windows .msi installer now allows HARP component selection for core, Python,
  IDL, MATLAB, and R.

* Updates to product ingestions:
  - AEOLUS L2B: properly split datetime, datetime_start, and datetime_stop
  - CCI L3 O3 LP: fixed wrong variable name
  - EarthCARE: added additional product types and updated ACM_CAP_2B
  - ECMWF GRIB: changed RWC/SWC/LWC/IWC variable names
  - OSIRIS L2: fixed wrong variable names
  - TES TL2ATMTN/TL2ATMTL: fixed wrong variable names

1.16 2022-10-31
~~~~~~~~~~~~~~~
